# mimic_grasping_ros_plugin_generator

./: CMakeLists.txt  README.md  package.xml
include/object_recognition_client/: obj_localization_ros.h  phoxi_cam_obj_localization_ros.h
install_configurations/: obj_localization_ros.pc.in  phoxi_obj_localization_ros.pc.in
src/examples/: phoxi_cam_object_recognition_client_node.cpp  raw_object_recognition_client_node.cpp  sub_node.cpp
src/object_recognition_client/: obj_localization_ros.cpp  phoxi_cam_obj_localization_ros.cpp
